@@ -12,6 +12,7 @@ from scriptengine.jinja import filters as j2filters
 from scriptengine.tasks.core import Task, timed_runner
 
 from helpers.exceptions import PresentationException
+from helpers.files import get_template
 from helpers.presentation_objects import PresentationObject
 
 # Repository where monitoring results are posted
@@ -45,7 +46,7 @@ class Gitlab(Task):
         self.log_debug(f"Template: {template_path}, Source File(s): {sources}")
 
         presentation_list = self.get_presentation_list(sources, dst_folder)
-        gitlab_template = self.get_template(context, template_path)
+        gitlab_template = get_template(context, template_path)
         gitlab_template.globals["urlencode"] = urllib.parse.quote
 
         self.log_debug("Connecting to Gitlab.")
@@ -88,24 +89,6 @@ class Gitlab(Task):
             except PresentationException as msg:
                 self.log_warning(f"Can not present diagnostic: {msg}")
         return presentation_list
-
-    def get_template(self, context, template):
-        """get Jinja2 template file"""
-        search_path = [".", "templates"]
-        if "_se_cmd_cwd" in context:
-            search_path.extend(
-                [
-                    context["_se_cmd_cwd"],
-                    Path(context["_se_cmd_cwd"]) / "templates",
-                ]
-            )
-        self.log_debug(f"Search path for template: {search_path}")
-
-        loader = jinja2.FileSystemLoader(search_path)
-        environment = jinja2.Environment(loader=loader)
-        for name, function in j2filters().items():
-            environment.filters[name] = function
-        return environment.get_template(template)
 
     def get_project_and_issue(self, key, issue_subject):
         """Connect to Gitlab server, find and return correct issue and project based on user input"""
