@@ -7,7 +7,7 @@ from scriptengine.jinja import filters as j2filters
 from scriptengine.tasks.core import Task, timed_runner
 
 from helpers.exceptions import PresentationException
-from helpers.files import ChangeDirectory
+from helpers.files import ChangeDirectory, get_template
 from helpers.presentation_objects import PresentationObject
 
 
@@ -33,7 +33,7 @@ class Markdown(Task):
         self.log_debug(f"Template: {template_path}, Source File(s): {sources}")
 
         presentation_list = self.get_presentation_list(sources, dst_folder)
-        md_template = self.get_template(context, template_path)
+        md_template = get_template(context, template_path)
 
         with ChangeDirectory(dst_folder):
             with open("./summary.md", "w") as md_out:
@@ -60,21 +60,3 @@ class Markdown(Task):
             except PresentationException as msg:
                 self.log_warning(f"Can not present diagnostic: {msg}")
         return presentation_list
-
-    def get_template(self, context, template_path):
-        """get Jinja2 template file"""
-        search_path = [".", "templates"]
-        if "_se_cmd_cwd" in context:
-            search_path.extend(
-                [
-                    context["_se_cmd_cwd"],
-                    Path(context["_se_cmd_cwd"]) / "templates",
-                ]
-            )
-        self.log_debug(f"Search path for template: {search_path}")
-
-        loader = jinja2.FileSystemLoader(search_path)
-        environment = jinja2.Environment(loader=loader)
-        for name, function in j2filters().items():
-            environment.filters[name] = function
-        return environment.get_template(template_path)
